--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Music Corner</title>
+  <title>The AudioDB</title>
   <!-- css style  -->
   <link rel="stylesheet" href="style.css" />
   <!-- google fonts  -->
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1>Dhuma Dhum Music Corner</h1>
+    <h1>The AudioDB Music Corner</h1>
     <div class="search-container">
       <input type="text" id="keyword" />
       <button onclick="handleSearch()">Search</button>
